<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_gravity="bottom">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<TextView
    android:layout_marginBottom="15dp"
    android:id="@+id/input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textColor="@color/Grey"
    android:textStyle="bold"
    android:textSize="40dp"
    android:gravity="end"
    />
    <TextView
        android:layout_marginBottom="40dp"
        android:id="@+id/resultView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="40dp"
        android:gravity="end"
        />
</LinearLayout>
    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/Blue"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_marginHorizontal="5dp"
                android:id="@+id/btn7"
                android:backgroundTint="@color/light_pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="25dp"
                android:text="@string/btn7" />

            <Button
                android:layout_marginHorizontal="5dp"
                android:id="@+id/btn8"
                android:backgroundTint="@color/light_pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="25dp"
                android:text="@string/btn8" />

            <Button
                android:layout_marginHorizontal="5dp"
                android:id="@+id/btn9"
                android:backgroundTint="@color/light_pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="25dp"
                android:text="@string/btn9" />

            <Button
                android:layout_marginHorizontal="5dp"
                android:id="@+id/btnAdd"
                android:backgroundTint="@color/dark_pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="25dp"
                android:text="@string/btnAdd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_marginHorizontal="5dp"
                android:id="@+id/btn4"
                android:backgroundTint="@color/light_pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="25dp"
                android:text="@string/btn4" />

            <Button
                android:layout_marginHorizontal="5dp"
                android:id="@+id/btn5"
                android:backgroundTint="@color/light_pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="25dp"
                android:text="@string/btn5" />
            <Button
                android:layout_marginHorizontal="5dp"
                android:id="@+id/btn6"
                android:backgroundTint="@color/light_pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="25dp"
                android:text="@string/btn6" />

            <Button
                android:layout_marginHorizontal="5dp"
                android:id="@+id/btnSub"
                android:backgroundTint="@color/dark_pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="25dp"
                android:text="@string/btnSub" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_marginHorizontal="5dp"
                android:id="@+id/btn1"
                android:backgroundTint="@color/light_pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="25dp"
                android:text="@string/btn1" />

            <Button
                android:layout_marginHorizontal="5dp"
                android:id="@+id/btn2"
                android:backgroundTint="@color/light_pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="25dp"
                android:text="@string/btn2" />

            <Button
                android:layout_marginHorizontal="5dp"
                android:id="@+id/btn3"
                android:backgroundTint="@color/light_pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="25dp"
                android:text="@string/btn3" />

            <Button
                android:layout_marginHorizontal="5dp"
                android:id="@+id/btnMultiply"
                android:backgroundTint="@color/dark_pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="25dp"
                android:text="@string/btnMultiply" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_marginHorizontal="5dp"
                android:id="@+id/btnDel"
                android:backgroundTint="@color/dark_pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="25dp"
                android:text="@string/btnDel"/>
            <Button
                android:layout_marginHorizontal="5dp"
                android:id="@+id/btn0"
                android:backgroundTint="@color/light_pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="25dp"
                android:text="@string/btn0"/>
            <Button
                android:layout_marginHorizontal="5dp"
                android:id="@+id/btnDecimal"
                android:backgroundTint="@color/light_pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="25dp"
                android:text="@string/btnDecimal"/>

            <Button
                android:layout_marginHorizontal="5dp"
                android:id="@+id/btnDivide"
                android:backgroundTint="@color/dark_pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="25dp"
                android:text="@string/btnDivide"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:layout_marginHorizontal="5dp"
                android:id="@+id/btnClear"
                android:backgroundTint="@color/dark_pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="25dp"
                android:text="@string/btnClear"/>
            <Button
                android:layout_marginHorizontal="5dp"
                android:id="@+id/btnEqual"
                android:backgroundTint="@color/dark_pink"
                android:layout_width="1.56in"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="25dp"
                android:text="@string/btnEqual"/>

        </LinearLayout>
    </LinearLayout>



</LinearLayout>